k8s/namespaces/monitoring/prometheus/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prometheus
  namespace: monitoring
  labels:
    app: prometheus
spec:
  selector:
    app: prometheus-server
  ports:
    - port: 9090
      targetPort: 9090
      protocol: TCP
      name: http
